[package]
name = "layeredconf-derive"
version = "0.2.0"
authors = ["Greg \"GothAck\" Miell <rust@greg.gothack.ninja>"]
description = "Layered configeration files, deserialized with serde"
repository = "https://github.com/GothAck/layeredconf"
documentation = "https://docs.rs/layeredconf"
categories = ["config", "encoding", "parsing"]
readme = "README.md"
license = "MIT"
edition = "2021"

[dependencies]
darling = "0.13"
syn = "1.0"
proc-macro2 = "1.0"
quote = "1.0"

[dev-dependencies]
anyhow = "1.0"
clap = "3.0.0-beta.5"
goldenfile = "1.1"
serde = { version = "1.0", features = ["derive"] }

[lib]
path = "src/lib.rs"
proc-macro = true
